--- a/app/src/main/res/layout/adapter_despesas.xml
+++ b/app/src/main/res/layout/adapter_despesas.xml
@@ -2,68 +2,45 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="10dp" android:descendantFocusability="blocksDescendants">
+
+    <CheckBox
+        android:id="@+id/chk_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp" />
 
     <TextView
-        android:id="@+id/txt_filter_mes"
+        android:id="@+id/txt_descricao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/spi_mes"
-        android:layout_marginStart="10dp"
-        android:text="@string/txt_filter_mes"
-        android:textStyle="bold" />
-
-    <Spinner
-        android:id="@+id/spi_mes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/txt_filter_mes" />
+        android:layout_toEndOf="@+id/chk_item"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/txt_filter_ano"
+        android:id="@+id/txt_categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/spi_ano"
-        android:layout_marginStart="7dp"
-        android:layout_toEndOf="@+id/spi_mes"
-        android:text="@string/txt_filter_ano"
-        android:textStyle="bold" />
+        android:layout_below="@+id/txt_descricao"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/chk_item" />
 
-    <Spinner
-        android:id="@+id/spi_ano"
+    <TextView
+        android:id="@+id/txt_valor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/txt_filter_ano" />
-
-    <Button
-        android:id="@+id/btn_update"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/txt_filter_ano"
+        android:layout_alignBaseline="@+id/txt_descricao"
         android:layout_alignParentEnd="true"
-        android:text="@string/btn_update"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         tools:ignore="RelativeOverlap" />
 
-    <View
-        android:id="@+id/separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/spi_mes"
-        android:background="@android:color/black" />
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/separator" />
-
     <TextView
-        android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/txt_semdespesa"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:id="@+id/txt_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/txt_categoria"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
